# msc-thesis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-scaletest.yml
.github/workflows/: latex-compile.yml  latexmk.yml  (+1 more)
crdtsign/: pyproject.toml
crdtsign/app/: pyproject.toml
crdtsign/app/src/: main.py
crdtsign/app/src/components/: file_signature_card.py
crdtsign/core/: pyproject.toml
crdtsign/core/src/crdtsign/: api.py  server.py  sign.py  storage.py  user.py
crdtsign/core/src/crdtsign/config/: __init__.py  data_retention.yaml
crdtsign/core/src/crdtsign/scripts/: cli.py  scalability_test.py
crdtsign/core/src/crdtsign/static/js/: main.js
crdtsign/core/src/crdtsign/templates/: index.html
crdtsign/core/src/crdtsign/utils/: data_retention.py  file_utils.py
crdtsign/core/tests/: compute_avg.py  process.py  process_iqr.ipynb  process_scale_metrics.ipynb  test_sign.py
crdtsign/core/tests/artifacts/processed/: 2025-11-16 19:00:00.349163.json  2025-11-30 18:17:01.021212.json  2025-11-30 18:26:52.245596.json  2025-11-30 19:09:18.773163.json  tests.csv  tests_ms.csv  tests_temp.csv
crdtsign/core/tests/artifacts/processed/scale_1/: 2025-11-16 20:40:35.994441.json  2025-11-28 18:30:20.942631.json  2025-11-30 18:16:19.157249.json  2025-11-30 18:26:23.440576.json  2025-11-30 18:48:27.539901.json  2025-11-30 19:06:34.554474.json  2025-11-30 19:10:28.094111.json  2026-01-02 19:37:46.127895.json  2026-01-02 19:38:59.585617.json  2026-01-02 19:39:26.979037.json  2026-01-02 19:39:53.581428.json  2026-01-02 19:40:22.164938.json  2026-01-02 19:41:30.389469.json  2026-01-02 19:42:48.831261.json  2026-01-02 19:44:35.329631.json  2026-01-02 19:45:30.962906.json  2026-01-02 19:45:59.665522.json
crdtsign/core/tests/artifacts/processed/scale_10/: 2026-01-02 22:56:14.108996.json  2026-01-02 22:59:08.441117.json  2026-01-02 23:06:21.708733.json  2026-01-02 23:10:14.871298.json  2026-01-02 23:10:47.572484.json  2026-01-02 23:12:10.073818.json  2026-01-02 23:12:35.221486.json  2026-01-02 23:15:25.010038.json  2026-01-02 23:18:33.256879.json  2026-01-02 23:35:53.179275.json
crdtsign/mobile/: pyproject.toml
crdtsign/mobile/src/: __init__.py  main.py  routes_example.py
crdtsign/mobile/src/assets/: manifest.json
crdtsign/mobile/src/components/: card.py  file_signature_card.py  file_signature_card_container.py
crdtsign/mobile/src/utils/: userdata.py
crdtsign/mobile/src/views/: create.py  home.py  registration.py
crdtsign/src/crdtsign/: api.py  client.py  server.py  sign.py  storage.py  user.py
crdtsign/src/crdtsign/scripts/: app.py  cli.py
crdtsign/src/crdtsign/static/css/: style.css
crdtsign/src/crdtsign/static/js/: main.js
docs/: USECASE.md
(+207 files in other folders)
