[project]
name = "crdtsign"
version = "0.1.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.2.0,<9.0.0)",
    "pycrdt (>=0.12.15,<0.13.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "rich (>=14.0.0,<15.0.0)",
]

[tool.poetry]
packages = [{include = "crdtsign", from = "src"}]

[tool.poetry.scripts]
crdtsign = "crdtsign.scripts.cli:cli"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
pytest = "^8.3.5"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
