[project]
name = "crdtsign-core"
version = "0.5.1"
description = ""
authors = [
    {name = "gf",email = "email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "pycrdt (>=0.12.42,<0.13.0)",
    "pycrdt-websocket (>=0.16.0,<0.17.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "httpx-ws (>=0.7.2,<0.8.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "quart>=0.20.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "arrow>=1.3.0",
    "lz4>=4.4.4",
]

[project.scripts]
crdtsign = "crdtsign.scripts.cli:cli"
crdtsign-app = "crdtsign.scripts.app:app"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pytest >=8.3.5, <8.4",
]
lint = [
    "ruff >=0.11.9, <0.12"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crdtsign"]
